# GeoPlegma

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  LICENCE-MIT.txt  README.md
.github/workflows/: deploy-docs.yml  release-js.yml
api/: Cargo.toml
api/example/: basic.rs
api/src/: api.rs  constants.rs  factory.rs  lib.rs
api/src/adapters/: mod.rs
api/src/adapters/dggal/: common.rs  dggal.rs  grids.rs  mod.rs
api/src/adapters/dggrid/: common.rs  igeo7.rs  isea3h.rs
api/src/adapters/h3o/: common.rs  h3.rs  h3o.rs
api/src/adapters/rhealpix/: mod.rs  rhealpix.rs
api/src/error/: dggrid.rs
api/src/models/: common.rs
dggrs/: Cargo.toml
dggrs/example/: basic.rs
dggrs/src/: constants.rs  factory.rs  lib.rs
diagrams/: DGGSvision.archimate
docs/: index.md
docs/.vitepress/: config.ts
gp-bindings/js/: .gitignore  Cargo.toml  package.json
gp-bindings/js/__test__/: index.spec.ts
gp-bindings/js/src/: lib.rs
gp-bindings/js/src/models/: common.rs  mod.rs
gp-bindings/js/src/ports/: dggrs.rs  mod.rs
gp-dggrs/: Cargo.toml
gp-dggrs/example/: ivea3h-bary.rs
gp-dggrs/examples/: ivea3h-bary.rs
gp-dggrs/impls/: ivea3h-bary.rs  ivea7h-z7.rs  mod.rs
gp-dggrs/src/: api.rs  lib.rs  sys_api.rs
gp-grid/: Cargo.toml
gp-grid/src/: lib.rs
gp-proj/: Cargo.toml
gp-proj/example/: basic.rs
gp-proj/src/: lib.rs
gp-test-fixtures/: README.md
playground/: ClosestLines.md  bary_plot.py  centresEven.md  centresOdd.md  temp.md  temp2.md
playground/env/: pyvenv.cfg
src/: lib.rs  main.rs
src/adapters/: mod.rs
src/constants/: earth.rs  mod.rs  polyhedron.rs  projections.rs  tolerance.rs
src/dggrs/: mod.rs
src/error/: dggal.rs  dggrid.rs  factory.rs  h3o.rs
src/factory/: dggrs_factory.rs  mod.rs
src/models/: common.rs  mod.rs  vector_3d.rs
src/old/: abstraction.rs  dggrs.rs  lib.rs  types.rs  vector.rs
src/ports/: dggrs.rs  mod.rs
src/utils/: geo.rs
tests/: README.md  cell_id.rs  grids.rs
(+79 files in other folders)
