# Copyright 2025 contributors to the GeoPlegmata project.
# Originally authored by Michael Jendryke (GeoInsight GmbH, michael.jendryke@geoinsight.ai)
#
# Licenced under the Apache Licence, Version 2.0 <LICENCE-APACHE or
# http://www.apache.org/licenses/LICENSE-2.0> or the MIT license
# <LICENCE-MIT or http://opensource.org/licenses/MIT>, at your
# discretion. This file may not be copied, modified, or distributed
# except according to those terms.

[package]
name = "api"
version = "0.2.0"
license = "MIT OR Apache-2.0"
edition = "2024"
readme = "README.md"
rust-version = "1.88"

[dependencies]
geo = "0.30.0"
rand = "0.8.5"
tracing = "0.1.41"
h3o = { version = "0.8.0", features = ["geo"] }
dggal-rust = {git = "https://github.com/GeoPlegma/dggal-rust.git", branch = "mj/update-unified-crate"}
#dggal-rust = {path = "../dggal-rust"}
rayon = "1.10.0"
thiserror = "2.0.12"
once_cell = "1.21.0"

[[example]]
name = "basic"
path = "example/basic.rs"
